--- a/myblog/members/templates/registration/user_profile.html
+++ b/myblog/members/templates/registration/user_profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
+    <link rel="icon" type="image" href="static/blog/images/favicon-logo1.ico">
 </head>
 <body style="background-color: #f9f8ff">
 {% extends 'base.html' %}
@@ -316,10 +317,7 @@
 
         .box-blog:hover {
             background-color: #f9f8ff;
-            /*box-shadow: 16px 20px 50px rgba(0, 0, 0, 0.12);*/
-        }
-
-        .box-blog:hover {
+            box-shadow: 16px 25px 50px rgba(0, 0, 0, 0.12);
             transform: scale(1.01);
             transition: all ease 0.3s;
         }
