--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
     <script src="https://kit.fontawesome.com/130fa5f424.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image" href="static/blog/images/favicon-logo1.ico">
     <style>
         img {
             max-width: 200%;
@@ -46,6 +47,12 @@
 
 <div class="article-title">
     <h1>{{ post.title }}</h1>
+</div>
+
+<div class="article-category" style="text-align: center; position: relative; left: -30px; font-family: Poppins, sans-serif">
+    <a href="{% url 'category' post.category|slugify %}" style="text-decoration: none">
+        <span style="color: rgb(136, 136, 136)">{{ post.category }}</span>
+    </a>
 </div>
 <br/>
 
@@ -155,6 +162,11 @@
         box-sizing: border-box;
         text-align: center;
         margin-right: 70px;
+    }
+
+    .article-category {
+        font-size: 18px;
+        color: rgb(136, 136, 136);
     }
 
     .article-title {
