--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -49,7 +49,7 @@
                         <div class="card-category" style="flex: 1">
                             <div style="display: flex; align-items: center;">
                                 <strong class="category-name">
-                                    <p>{{ post.category }} <span style="font-weight: normal;">&mdash;</span></p>
+                                    <p><a href="{% url 'category' post.category|slugify %}" style="text-decoration: none"><span style="color: black">{{ post.category }}</span></a> <span style="font-weight: normal;">&mdash;</span></p>
                                 </strong>
                                 {% for top_post in trending_posts %}
                                 {% if top_post.id == post.id %}
@@ -364,7 +364,9 @@
             <div class="category-list">
                 {% for category in cat_menu %}
                 <div class="category-item">
-                    <span class="category-category">{{ category.category }}</span>
+                    <a href="{% url 'category' category.category|slugify %}" style="text-decoration: none">
+                        <span class="category-category">{{ category.category }}</span>
+                    </a>
                     <span class="category-count">{{ category.post_count }}</span>
                 </div>
                 {% endfor %}
